--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
     </div>
     <div class="col-lg-6 mycol">
-      <img class="title-image" src="/images/phonedemo.png" alt="phone-mockup">
-      <img class="title-image-lg" src="/images/phonedemo.png" alt="phone-mockup">
+      <img class="title-image" src="phonedemo.png" alt="phone-mockup">
+      <img class="title-image-lg" src="phonedemo.png" alt="phone-mockup">
     </div>
   </div>
 </div>
