--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ms-auto pe-2">
               <li class="nav-item">
-                  <a class="nav-link" href="/index.html">Home</a>
+                  <a class="nav-link" href="https://dibyashaktimoharana.github.io/positiVITi/">Home</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#features">About</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/counsellors.html">Our counsellors</a>
+                  <a class="nav-link" href="https://dibyashaktimoharana.github.io/pages-ourcounsellors/">Our counsellors</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#cta">Contact Us</a>
@@ -64,8 +64,8 @@
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
     </div>
     <div class="col-lg-6 mycol">
-      <img class="title-image" src="phonedemo.png" alt="phone-mockup">
-      <img class="title-image-lg" src="phonedemo.png" alt="phone-mockup">
+      <img class="title-image" src="/phonedemo.png" alt="phone-mockup">
+      <img class="title-image-lg" src="/phonedemo.png" alt="phone-mockup">
     </div>
   </div>
 </div>
